# rs_game

./: .gitignore  Cargo.toml  rs_game.js
assets/: minion.glb  tree.glb
assets/player/: player.glb
docs/: building-structures.md  enemy-combat-system.md  minions-gathering-resources.md  portal-to-fight-instance.md  project.md
src/: attack.rs  buildings.rs  enemy.rs  features.rs  ground.rs  main.rs  minion.rs  minions.rs  player.rs  resources.rs  selector.rs  shared.rs  shared_resources.rs  states.rs  ui.rs
src/buildings/: events.rs  laboratory.rs  minion_assembly.rs  shared.rs
src/features/: attack.rs  buildings.rs  enemies.rs  enemy.rs  ground.rs  minions.rs  player.rs  portal.rs  resources.rs  selector.rs  shared.rs  splash.rs  ui.rs
src/features/buildings/: gathering_post.rs  laboratory.rs  minion_assembly.rs  shared.rs
src/features/enemies/: ranged.rs
src/features/minions/: following.rs  gathering.rs
src/features/ui/: power_ups.rs  top_ui.rs
src/minions/: following.rs  gathering.rs
src/resources/: hydrogen.rs
src/ui/: power_ups.rs  top_ui.rs
web/: index.html
