[package]
name = "rs-game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy_dylib = { version = "0.13.0" }

[dependencies]
bevy = { version = "0.13.0" }
bevy_mod_picking = "0.18.2"
bevy_rapier3d = { version = "0.25.0" }
rand = "0.8.5"
